refer to an html link

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,6 +12,6 @@
 	</head>
 	<body>
 		<h1>Astro + Bun + Vercel</h1>
-                https://docs.astro.build/en/recipes/bun/
+			refer to:	<a href="https://docs.astro.build/en/recipes/bun/">https://docs.astro.build/en/recipes/bun/</a>.
 	</body>
 </html>
