--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@
 		<title>Astro</title>
 	</head>
 	<body>
-		<h1>Astro + Bun + Vercel</h1>
+		<h1>Astro + Bun + Vercel + Elysia + Swagger</h1>
 			refer to:	<a href="https://docs.astro.build/en/recipes/bun/">https://docs.astro.build/en/recipes/bun/</a>.
 	</body>
 </html>
